--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^7.3",
-        "ezyang/htmlpurifier": "delight-im/auth",
+        "ezyang/htmlpurifier": "^4.13",
         "delight-im/db": "^1.3",
         "delight-im/auth": "^8.3",
         "phpmailer/phpmailer": "^6.8",
