--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,39 @@
 {
-    "name": "joepdooper/ivy",
-    "description": "another sleek simple fast PHP framework with an effortless template and plugin environment",
-    "type": "project",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Joep Dooper"
-        }
-    ],
-    "minimum-stability": "dev",
-    "require": {
-        "php": "^7.3",
-        "ezyang/htmlpurifier": "^4.13",
-        "delight-im/db": "^1.3",
-        "delight-im/auth": "^8.3",
-        "phpmailer/phpmailer": "^6.8",
-        "verot/class.upload.php": "^2.1",
-        "matthiasmullie/minify": "^1.3",
-        "php-curl-class/php-curl-class": "^9.18",
-        "bramus/router": "^1.6",
-        "bainternet/php-hooks": "^1.0",
-        "spatie/schema-org": "^3.4"
-    },
-    "scripts": {
-        "post-install-cmd": [
-            "@npmInstall"
-        ],
-        "npmInstall": [
-            "npm install"
-        ]
+  "name": "joepdooper/ivy",
+  "description": "another sleek simple fast PHP framework with an effortless template and plugin environment",
+  "type": "project",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Joep Dooper"
     }
+  ],
+  "minimum-stability": "dev",
+  "require": {
+    "php": "^7.3",
+    "ezyang/htmlpurifier": "^4.13",
+    "delight-im/db": "^1.3",
+    "delight-im/auth": "^8.3",
+    "phpmailer/phpmailer": "^6.8",
+    "verot/class.upload.php": "^2.1",
+    "matthiasmullie/minify": "^1.3",
+    "php-curl-class/php-curl-class": "^9.18",
+    "bramus/router": "^1.6",
+    "bainternet/php-hooks": "^1.0",
+    "spatie/schema-org": "^3.4"
+  },
+  "scripts": {
+    "post-install-cmd": [
+      "@npmInstall"
+    ],
+    "npmInstall": [
+      "npm install"
+    ]
+  },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/joepdooper/ivy"
+    }
+  ]
 }
