--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "joepdooper/ivy",
   "description": "another sleek simple fast PHP framework with an effortless template and plugin environment",
+  "version": "0.2.0",
   "type": "project",
   "license": "MIT",
   "authors": [
@@ -10,18 +11,22 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": "^7.3",
-    "ezyang/htmlpurifier": "^4.13",
-    "delight-im/db": "^1.3",
-    "delight-im/auth": "^8.3",
-    "phpmailer/phpmailer": "^6.8",
-    "verot/class.upload.php": "^2.1",
-    "matthiasmullie/minify": "^1.3",
-    "php-curl-class/php-curl-class": "^9.18",
-    "bramus/router": "^1.6",
-    "bainternet/php-hooks": "^1.0",
-    "vlucas/phpdotenv": "^5.5",
-    "spatie/schema-org": "^3.4"
+      "php": ">=8.1.0",
+      "ezyang/htmlpurifier": "^4.13",
+      "delight-im/auth": "^8.3",
+      "delight-im/db": "^1.3",
+      "phpmailer/phpmailer": "^6.4",
+      "peppeocchi/php-cron-scheduler": "^4.0",
+      "verot/class.upload.php": "^2.1",
+      "voku/anti-xss": "^4.1",
+      "spatie/url": "^1.3",
+      "matthiasmullie/minify": "^1.3",
+      "php-curl-class/php-curl-class": "^9.6",
+      "bramus/router": "^1.6",
+      "bainternet/php-hooks": "^1.0",
+      "vlucas/phpdotenv": "^5.5",
+      "spatie/schema-org": "^3.14",
+      "samdark/sitemap": "^2.4"
   },
   "scripts": {
     "post-install-cmd": [
