Add cookie consent plugin

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "macy": "^2.5.1",
     "petite-vue": "^0.4.1",
     "sortablejs": "^1.15.0",
-    "vanilla-cookieconsent": "^3.0.0-rc.17"
+    "swup": "^4.5.1",
+    "vanilla-cookieconsent": "^3.0.0"
   }
 }
