--- a/composer.json
+++ b/composer.json
@@ -10,24 +10,32 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": ">=8.1.0",
+    "php": ">=8.2.0",
+    "ext-pdo": "*",
     "ezyang/htmlpurifier": "^4.13",
     "delight-im/auth": "^8.3",
     "delight-im/db": "^1.3",
     "phpmailer/phpmailer": "^6.4",
     "verot/class.upload.php": "^2.1",
-    "spatie/url": "^1.3",
     "matthiasmullie/minify": "^1.3",
     "php-curl-class/php-curl-class": "^9.6",
     "bramus/router": "^1.6",
     "bainternet/php-hooks": "^1.0",
     "vlucas/phpdotenv": "^5.5",
     "samdark/sitemap": "^2.4",
-    "phrity/websocket": "dev-v2.1-main"
+    "prinsfrank/php-validated-properties": "dev-main"
   },
   "scripts": {
     "post-create-project-cmd": [
       "npm install"
     ]
+  },
+  "require-dev": {
+    "pestphp/pest": "3.x-dev"
+  },
+  "config": {
+    "allow-plugins": {
+      "pestphp/pest-plugin": true
+    }
   }
 }
