--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -14,6 +14,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        php-version: [8.2]
+
     steps:
     - uses: actions/checkout@v4
 
