--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "dependencies": {
-    "@material/web": "^1.4.0",
+    "@material/web": "^1.3.0",
     "@orestbida/iframemanager": "^1.2.5",
     "axios": "^1.1.3",
-    "bootstrap": "^5.3.2",
     "linkify-html": "^4.0.2",
     "linkifyjs": "^4.0.2",
     "macy": "^2.5.1",
+    "normalize.css": "^8.0.1",
     "petite-vue": "^0.4.1",
     "sortablejs": "^1.15.0",
     "swup": "^4.5.1",
     "vanilla-cookieconsent": "^3.0.0"
+  },
+  "devDependencies": {
+    "daisyui": "^4.12.10",
+    "tailwindcss": "^3.4.4"
   }
 }
