--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,31 @@
 version: '3.8'
 
 services:
-  web:
+
+  server:
     image: php:8.2-apache
-    container_name: apache_server
+    container_name: ivy_apache_server
     ports:
       - "8000:80"
     volumes:
       - .:/var/www/html
+      - ./apache-config.conf:/etc/apache2/sites-available/000-default.conf
     environment:
       - APACHE_DOCUMENT_ROOT=/var/www/html
+    command: >
+      bash -c "apt-get update &&
+              apt-get install -y apache2-utils &&
+              docker-php-ext-install pdo_mysql &&
+              a2enmod rewrite expires deflate headers &&
+              apache2-foreground"
     depends_on:
       - db
     networks:
-      - webnet
+      - ivy_net
 
   db:
     image: mysql:5.7
-    container_name: mysql_db
+    container_name: ivy_mysql_db
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: ivy
@@ -29,10 +37,10 @@ services:
     ports:
       - "3306:3306"
     networks:
-      - webnet
+      - ivy_net
 
 networks:
-  webnet:
+  ivy_net:
     driver: bridge
 
 volumes:
