--- a/composer.json
+++ b/composer.json
@@ -23,12 +23,12 @@
     "bainternet/php-hooks": "^1.0",
     "vlucas/phpdotenv": "^5.5",
     "samdark/sitemap": "^2.4",
-    "corviz/crow": "dev-main",
     "wixel/gump": "dev-master",
     "latte/latte": "^3.0@dev",
     "predis/predis": "^3.0@alpha",
     "amphp/file": "3.x-dev",
-    "amphp/cache": "2.x-dev"
+    "amphp/cache": "2.x-dev",
+    "joepdooper/ivy-roots": "dev-main"
   },
   "scripts": {
     "post-create-project-cmd": [
@@ -37,7 +37,8 @@
   },
   "require-dev": {
     "pestphp/pest": "3.x-dev",
-    "phpstan/phpstan": "2.0.x-dev"
+    "phpstan/phpstan": "2.0.x-dev",
+    "kint-php/kint": "dev-master"
   },
   "config": {
     "allow-plugins": {
