--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@material/web": "^1.3.0",
     "@orestbida/iframemanager": "^1.2.5",
     "axios": "^1.1.3",
+    "callbackhooks": "^1.0.0",
     "linkify-html": "^4.0.2",
     "linkifyjs": "^4.0.2",
     "macy": "^2.5.1",
