--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "joepdooper/ivy",
-  "description": "another sleek simple fast PHP framework with an effortless template and plugin environment",
+  "description": "Another sleek, simple, fast PHP framework with an effortless template and plugin environment",
   "type": "project",
   "license": "MIT",
   "authors": [
@@ -12,19 +12,10 @@
   "require": {
     "php": ">=8.2.0",
     "ext-pdo": "*",
-    "ezyang/htmlpurifier": "^4.13",
-    "delight-im/auth": "^8.3",
-    "delight-im/db": "^1.3",
-    "phpmailer/phpmailer": "^6.4",
-    "verot/class.upload.php": "^2.1",
     "matthiasmullie/minify": "^1.3",
     "php-curl-class/php-curl-class": "^9.6",
-    "bramus/router": "^1.6",
     "bainternet/php-hooks": "^1.0",
-    "vlucas/phpdotenv": "^5.5",
     "samdark/sitemap": "^2.4",
-    "wixel/gump": "dev-master",
-    "latte/latte": "^3.0@dev",
     "predis/predis": "^3.0@alpha",
     "amphp/file": "3.x-dev",
     "amphp/cache": "2.x-dev",
