--- a/example.env
+++ b/example.env
@@ -1,4 +1,7 @@
-IVY_VERSION=0.8.0
+# -- ERRORS
+IGNORE_REPEATED_ERRORS=true
+DISPLAY_ERRORS=true
+LOG_ERRORS=true
 
 # -- SERVER
 SERVER_PORT=80
@@ -19,3 +22,6 @@ MAIL_HOST=
 MAIL_USERNAME=
 MAIL_PASSWORD=
 MAIL_PORT=
+MAIL_SMTP_AUTH=true
+MAIL_SMTP_SECURE=ssl
+MAIL_DEBUG=0
