--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "predis/predis": "^3.0@alpha",
     "amphp/file": "3.x-dev",
     "amphp/cache": "2.x-dev",
-    "joepdooper/ivy-roots": "dev-main"
+    "joepdooper/ivy-roots": "dev-main",
+    "symfony/http-foundation": "7.3.x-dev"
   },
   "scripts": {
     "post-create-project-cmd": [
