--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@material/web": "^1.3.0",
     "@orestbida/iframemanager": "^1.2.5",
+    "@tailwindcss/cli": "^4.0.12",
     "axios": "^1.1.3",
     "callbackhooks": "^1.0.0",
     "linkify-html": "^4.0.2",
@@ -11,10 +12,10 @@
     "petite-vue": "^0.4.1",
     "sortablejs": "^1.15.0",
     "swup": "^4.5.1",
+    "tailwindcss": "^4.0.12",
     "vanilla-cookieconsent": "^3.0.0"
   },
   "devDependencies": {
-    "daisyui": "^4.12.10",
-    "tailwindcss": "^3.4.4"
+    "daisyui": "^5.0.0"
   }
 }
