--- a/example.env
+++ b/example.env
@@ -10,13 +10,11 @@ LOG_ERRORS=true
 SERVER_PORT=80
 
 # -- DB
-DB_CONNECTION=mysql
-DB_HOST=db
-DB_SERVER=
+DB_HOST=localhost
 DB_PORT=3306
+DB_DATABASE=
 DB_USERNAME=
 DB_PASSWORD=
-DB_DATABASE=
 
 # -- MAIL
 MAIL_SENDER_ADDRESS=
