--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "php-curl-class/php-curl-class": "^9.6",
     "bainternet/php-hooks": "^1.0",
     "samdark/sitemap": "^2.4",
-    "predis/predis": "^3.0@alpha",
+    "predis/predis": "^3.0@alpha"
   },
   "scripts": {
     "post-create-project-cmd": [
