--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "joepdooper/ivy",
+  "version": "0.8.1",
   "description": "Another sleek, simple, fast PHP framework with an effortless template and plugin environment",
   "type": "project",
   "license": "MIT",
@@ -11,13 +12,14 @@
   "minimum-stability": "dev",
   "require": {
     "php": ">=8.2.0",
-    "joepdooper/ivy-roots": "dev-main",
+    "joepdooper/ivy-roots": "^0.8",
     "matthiasmullie/minify": "^1.3",
     "php-curl-class/php-curl-class": "^9.6",
     "bainternet/php-hooks": "^1.0",
     "samdark/sitemap": "^2.4",
     "predis/predis": "^3.0@alpha",
-    "ezyang/htmlpurifier": "dev-master"
+    "ezyang/htmlpurifier": "dev-master",
+    "wixel/gump": "2.2.0"
   },
   "scripts": {
     "post-create-project-cmd": [
