--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "joepdooper/ivy",
-  "description": "Another sleek, simple, fast PHP framework with an effortless template and plugin environment",
+  "description": "Yet another sleek simple fast CMS with an effortless template and plugin environment",
   "type": "project",
   "license": "MIT",
   "authors": [
