--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
+    "@joepdooper/mini-editor": "^1.0.1",
     "@tailwindcss/cli": "^4.0.12",
     "axios": "^1.1.3",
-    "callbackhooks": "^1.0.0",
+    "callbackhooks": "^2.0.0",
     "linkify-html": "^4.0.2",
     "linkifyjs": "^4.0.2",
     "macy": "^2.5.1",
