--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "samdark/sitemap": "^2.4",
     "predis/predis": "^3.0@alpha",
     "ezyang/htmlpurifier": "dev-master",
-    "wixel/gump": "2.2.0"
+    "wixel/gump": "^2.2"
   },
   "scripts": {
     "post-create-project-cmd": [
