--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "minimum-stability": "dev",
   "require": {
     "php": ">=8.3.0",
-    "joepdooper/ivy-roots": "^0.8",
+    "joepdooper/ivy-roots": "dev-main",
     "matthiasmullie/minify": "^1.3",
     "php-curl-class/php-curl-class": "^9.6",
     "bainternet/php-hooks": "^1.0",
