--- a/.github/workflows/php83.yml
+++ b/.github/workflows/php83.yml
@@ -32,6 +32,10 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
 
+    - uses: php-actions/phpstan@v3
+      with:
+        path: src/
+
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
 
