--- a/.github/workflows/php83.yml
+++ b/.github/workflows/php83.yml
@@ -33,6 +33,8 @@ jobs:
       run: composer install --prefer-dist --no-progress
 
     - uses: php-actions/phpstan@v3
+      with:
+        path: routes/
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
