--- a/.github/workflows/php83.yml
+++ b/.github/workflows/php83.yml
@@ -35,6 +35,8 @@ jobs:
     - uses: php-actions/phpstan@v3
       with:
         path: routes/
+        php_version: 8.3
+        level: 8
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
