--- a/.github/workflows/php83.yml
+++ b/.github/workflows/php83.yml
@@ -38,6 +38,11 @@ jobs:
         php_version: 8.3
         level: 8
 
+    - name: PestPHP (Run Pest Tests)
+    # You may pin to the exact commit or the version.
+    # uses: NWBY/pest-action@a446e7d3d99823679ca5e72acd7e435e6ae50e37
+      uses: NWBY/pest-action@v1.2.0
+
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
 
