--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
   ],
   "require": {
     "php": ">=8.3.0",
-    "joepdooper/ivy-roots": "dev-main"
+    "joepdooper/ivy-roots": "dev-main",
+    "wixel/gump": "^2.2",
+    "symfony/mime": "^7.3"
   },
   "scripts": {
     "post-create-project-cmd": [
