--- a/example.env
+++ b/example.env
@@ -2,9 +2,11 @@ APP_KEY=
 APP_ENV=development
 
 # -- ERRORS
+ERROR_REPORTING=E_ALL
 IGNORE_REPEATED_ERRORS=true
 DISPLAY_ERRORS=true
 LOG_ERRORS=true
+ERROR_LOG_FILE=logs/php_error.txt
 
 # -- SERVER
 SERVER_PORT=80
@@ -26,3 +28,7 @@ MAIL_PORT=
 MAIL_SMTP_AUTH=true
 MAIL_SMTP_SECURE=ssl
 MAIL_DEBUG=0
+
+# -- VITE
+VITE_HOST=localhost
+VITE_PORT=5173
