--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
     "@tailwindcss/cli": "^4.0.12",
     "axios": "^1.1.3",
     "callbackhooks": "^2.0.0",
+    "htmx.org": "^2.0.7",
     "linkify-html": "^4.0.2",
     "linkifyjs": "^4.0.2",
     "macy": "^2.5.1",
     "petite-vue": "^0.4.1",
     "sortablejs": "^1.15.0",
-    "tailwindcss": "^4.0.12"
+    "tailwindcss": "^4.0.12",
+    "vite-plugin-live-reload": "^3.0.5"
   },
   "devDependencies": {
     "daisyui": "^5.0.0",
