--- a/example.env
+++ b/example.env
@@ -30,5 +30,6 @@ MAIL_SMTP_SECURE=ssl
 MAIL_DEBUG=0
 
 # -- VITE
-VITE_HOST=localhost
+VITE_FRONTEND_HOST=localhost
+VITE_BACKEND_HOST=host.docker.internal
 VITE_PORT=5173
