--- a/example.env
+++ b/example.env
@@ -9,14 +9,14 @@ LOG_ERRORS=true
 ERROR_LOG_FILE=logs/php_error.txt
 
 # -- SERVER
-SERVER_PORT=80
+SERVER_PORT=8080
 
 # -- DB
-DB_HOST=localhost
+DB_HOST=ivy_mysql
 DB_PORT=3306
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_DATABASE=ivy_db
+DB_USERNAME=ivy_db_username
+DB_PASSWORD=ivy_db_password
 
 # -- MAIL
 MAIL_SENDER_ADDRESS=
