--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,8 @@
     }
   ],
   "require": {
-    "php": ">=8.3.0",
-    "joepdooper/ivy-roots": "dev-main",
-    "wixel/gump": "^2.2",
-    "symfony/mime": "^7.3",
-    "nesbot/carbon": "^3.10"
+    "php": ">=8.4.0",
+    "joepdooper/ivy-roots": "dev-main"
   },
   "scripts": {
     "post-install-cmd": [
