--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,7 +2,7 @@ services:
 
   apache:
     image: php:8.4-apache
-    container_name: ivy_apache
+    container_name: ${APACHE_HOST:-ivy_apache}
     command: >
       bash -c "apt-get update && apt-get install -y \
         libicu-dev libjpeg-dev libpng-dev libwebp-dev libfreetype6-dev curl \
@@ -14,41 +14,31 @@ services:
         && apache2-foreground"
     ports:
       - "${SERVER_PORT:-8080}:80"
+    environment:
+      APACHE_DOCUMENT_ROOT: /var/www/public
     volumes:
-      - ./:/var/www
-      - ./docker/apache.conf:/etc/apache2/sites-available/000-default.conf
-      - ./docker/custom.ini:/usr/local/etc/php/conf.d/custom.ini
-    depends_on:
-      - mysql
-      - mailcatcher
-    networks:
-      - ivy-network
+      - ../:/var/www
+      - ./sites-available:/etc/apache2/sites-available
+      - ./sites-enabled:/etc/apache2/sites-enabled
+      - ./php/custom.ini:/usr/local/etc/php/conf.d/custom.ini
 
   mysql:
     image: mysql
     container_name: ${DB_HOST:-ivy_mysql}
     environment:
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-root}
-      MYSQL_DATABASE: ${DB_DATABASE:-ivy}
-      MYSQL_USER: ${DB_USERNAME:-root}
-      MYSQL_PASSWORD: ${DB_PASSWORD:-root}
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: ${DB_DATABASE:-ivy_db}
+      MYSQL_USER: ${DB_USERNAME:-ivy_db_username}
+      MYSQL_PASSWORD: ${DB_PASSWORD:-ivy_db_password}
     ports:
       - "${DB_PORT:-3306}:3306"
     volumes:
-      - ./ivy.sql:/docker-entrypoint-initdb.d/ivy.sql
-    networks:
-      - ivy-network
+      - ./mysql/ivy.sql:/docker-entrypoint-initdb.d/ivy.sql
 
   mailcatcher:
     image: dockage/mailcatcher
     container_name: ${MAIL_HOST:-ivy_mailcatcher}
     hostname: ${MAIL_HOST:-ivy_mailcatcher}
     ports:
-      - "1080:1080"
-      - "1025:1025"
-    networks:
-      - ivy-network
-
-networks:
-  ivy-network:
-    driver: bridge
+      - "1080:1080" # Web UI
+      - "1025:1025" # SMTP
