--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Run PHPStan
       uses: php-actions/phpstan@v3
       with:
-        path: routes/
+        path: .
         php_version: 8.4
         level: 1
 
