--- a/phpstan.neon
+++ b/phpstan.neon
@@ -7,6 +7,7 @@ parameters:
 
     excludePaths:
         - vendor/*
+        - !vendor/joepdooper/ivy-roots/*
         - docker/*
         - logs/*
         - plugins/*
