--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,25 +1,12 @@
-# phpstan.neon
-includes:
-    # Optional: bleeding edge PHPStan features
-    # - vendor/phpstan/phpstan/conf/bleedingEdge.neon
-
 parameters:
-    # PHPStan level (can increase as you mature)
     level: 1
-
-    # Paths PHPStan will analyze
     paths:
         - routes
-        - plugins   # add if you want to analyze plugins
-        - templates # add if you want to analyze templates
-
-    # Paths to exclude from analysis
     excludePaths:
         - vendor/*
-        - docker/*
+        - plugins/*
+        - templates/*
         - logs/*
-
-    # Autoload files (PHPStan will load them before analyzing your code)
-    autoload_files:
-        - vendor/autoload.php     # Composer autoloader for Ivy roots
-        - autoloader.php          # Your custom autoloader for plugins/templates
+        - docker/*
+    bootstrapFiles:
+        - vendor/autoload.php
