--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,7 @@
 parameters:
     paths:
         - routes
+        - templates
+        - plugins
     scanDirectories:
         - vendor/joepdooper/ivy-roots/src
